--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,6 +12,11 @@ img {
   border-radius: 4px;
 }
 
+html, body {
+  background: #000;
+  overflow-x: hidden;
+}
+
 /*
 * --------------------------------------------------
 * Non anchor links
